--- a/src/shared/layout/BaseLayout/index.scss
+++ b/src/shared/layout/BaseLayout/index.scss
@@ -1,5 +1,9 @@
 
 .base-layout {
     margin: 0 auto;
-    background-color: red;
+    margin-top: 2em;
+    width: 60vw;
+    height: 80%;
+    border: 1px solid #bfbfbf;
+    border-radius: 16px;
 }
