--- a/src/shared/layout/BaseLayout/index.scss
+++ b/src/shared/layout/BaseLayout/index.scss
@@ -3,7 +3,7 @@
     margin: 0 auto;
     margin-top: 2em;
     width: 60vw;
-    height: 80%;
+    // height: 80%;
     border: 1px solid #bfbfbf;
     border-radius: 16px;
     overflow: hidden;
