--- a/src/shared/ui/Textarea/index.scss
+++ b/src/shared/ui/Textarea/index.scss
@@ -2,7 +2,11 @@
     min-height: 50px;
     width: 100%;
     min-width: 100px;
-    
+    font-size: 1.4em;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+
     &[placeholder]:empty:before {
         content: attr(placeholder);
         color: #555; 
