--- a/src/entities/todo/ui/TodoCard/index.scss
+++ b/src/entities/todo/ui/TodoCard/index.scss
@@ -1,4 +1,11 @@
 .todo-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    &__content {
+
+    }
 
     &__info {
         font-size: 16px;
